<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".activities.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="3dp"
        android:background="@drawable/rounded_corners_with_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/search_here"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/white"
            android:tint="@color/colorAppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47"
            app:srcCompat="@drawable/ic_arrow_back_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/spacing_above_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="2sp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_location_row"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/whiteBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/spacing_above_current_location">

        <View
            android:id="@+id/current_location_row_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/current_location_row"
            app:layout_constraintEnd_toEndOf="@+id/current_location_row"
            app:layout_constraintStart_toStartOf="@+id/current_location_row"
            app:layout_constraintTop_toTopOf="@+id/current_location_row" />

        <ImageView
            android:id="@+id/current_location_icon"
            android:layout_width="59dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/current_location_row_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_my_location_24dp" />

        <TextView
            android:id="@+id/current_location_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:padding="15dp"
            android:text="@string/my_current_location"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/current_location_icon"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/spacing_above_next_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="2sp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintTop_toBottomOf="@+id/current_location_row"/>

    <TextView
        android:id="@+id/next_class_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_class"
        android:textSize="24sp"
        android:paddingStart="5dp"
        android:background="@color/whiteBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/spacing_above_next_class"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/next_class_row"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/whiteBackgroundColor"
        app:layout_constraintTop_toBottomOf="@id/next_class_title">

        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/border"
            tools:ignore="MissingConstraints"></LinearLayout>

        <View
            android:id="@+id/next_class_row_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/next_class_row"
            app:layout_constraintEnd_toEndOf="@+id/next_class_row"
            app:layout_constraintStart_toStartOf="@+id/next_class_row"
            app:layout_constraintTop_toTopOf="@+id/next_class_row" />

        <ImageView
            android:id="@+id/next_class_icon"
            android:layout_width="59dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/next_class_row_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_next_class_book_icon" />

        <TextView
            android:id="@+id/next_class_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:padding="15dp"
            android:text="@string/no_classes_today"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next_class_arrow"
            app:layout_constraintStart_toEndOf="@+id/next_class_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/next_class_arrow"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:tint="@color/whiteBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrow_right"
            tools:layout_editor_absoluteY="3dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/searchResults"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/whiteBackgroundColor"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>